--- a/PresentationPrv/src/main/webapp/index.html
+++ b/PresentationPrv/src/main/webapp/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <html>
 <head>
-    <META HTTP-EQUIV="Refresh" CONTENT="0;URL=prv/connexion_input.action">
+    <META HTTP-EQUIV="Refresh" CONTENT="0;URL=prv/rv.action">
 </head>
 
 <body>
